    * Resizing could crash if you resize small enough.

'self' in arg list is now highlighted a different colour.

flush_output option added to config to control whether output is flushed to
stdout or not on exit.

Piping something to bpython made it lock up as stdin was not the keyboard -
bpython just executes stdin and exits instead of trying to do something clever.

v0.7.1
======
Added support for a history file, defaults to ~/.pythonhist and 100 lines but
is configurable from the rc file (see sample-rc).

Charles Duffy has added a yank/put thing - C-k and C-y. He also ran the code
through some PEP-8 checker thing and fixed up a few old habits I manage to
break but didn't manage to fix the code to reflect this - thank you!

Jørgen Tjernø has fixed up the autoindentation issues we encountered when
bringing soft tabs in.

SyntaxError, ValueError and OverflowError are now caught properly
(code.InteractiveInterpreter treats these as different to other exceptions as
it doesn't print the whole traceback, so a different handler is called). This
was discovered as I was trying to stop autoindentation from occurring on a
SyntaxError, which has also been fixed.

'.' now in sys.path on startup.

v0.7.0
======
C-d behaviour changed so it no longer exits if the current line isn't empty.

Extra linebreak added to end of stdout flush.

pygments and pyparsing are now dependencies.

Jørgen Tjernø has done lots of cool things like write a manpage and .desktop
file and improved the way tabbing works and also added home, end and del key
handling as well as C-w for deleting words - thanks a lot!

raw_input() and all its friends now work fine.

PYTHONSTARTUP handled without blowing up on stupid errors (it now parses the
file at once instead of feeding it to the repl line-by-line).

v0.6.4
======
KeyboardInterrupt handler clears the list window properly now.

v0.6.3
======
Forgot to switch rpartition to split for 2.4 compat.

v0.6.2
======